--- a/TimeSeriesSettings.cfg
+++ b/TimeSeriesSettings.cfg
@@ -1,21 +1,22 @@
 [inputParams]
-dayRangeStart = 5600
-dayRangeEnd = 5635
-dayStepSize = 5
-timeWindow = 10
-firstLatitude = 40
-secondLatitude = 65
-firstLongitude = 200
-secondLongitude = 230
-pressureCutoff = 970
-maxPressure = 1000
-changeInPressure = 5
+dayrangestart = 2016,1,2
+dayrangeend = 2016,5,21
+daystepsize = 5
+timewindow = 10
+firstlatitude = 40
+secondlatitude = 65
+firstlongitude = 200
+secondlongitude = 230
+pressurecutoff = 970
+maxpressure = 1000
+changeinpressure = 5
 
 [desiredResults]
-dispTemp = true
-dispSalinity = true
-dispSigmaT = true
-dispSpiciness = true
-dispDynamicHeight = true
-latitudeDesired = 50
-longitudeDesired = 215
+disptemp = True
+dispsalinity = True
+dispsigmat = True
+dispspiciness = True
+dispdynamicheight = True
+latitudedesired = 50
+longitudedesired = 215
+
